--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "maniascript-support",
     "description": "Maniascript support for vscode",
-    "version": "0.1.5",
+    "version": "0.1.6",
     "publisher": "reaby",
     "license": "MIT",
     "engines": {
@@ -19,7 +19,7 @@
         "type": "git",
         "url": "https://github.com/reaby/maniascript-support"
     },
-    "main": "./out/extension.js",
+    "main": "./app/extension.js",
     "contributes": {
         "menus": {
             "editor/context": [
@@ -90,10 +90,7 @@
                 "path": "./syntaxes/jinja2-ManiaScript.json",
                 "injectTo": [
                     "text.xml.jinja"
-                ],
-                "embeddedLanguages": {
-                    "meta.embedded.script.block": "maniascript"
-                }
+                ]
             },
             {
                 "scopeName": "xml.maniascript",
@@ -129,17 +126,22 @@
     },
     "icon": "images/ms.png",
     "scripts": {
-        "vscode:prepublish": "npm run compile",
+        "vscode:prepublish": "npm run esbuild-base -- --minify",
+        "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=app/extension.js --external:vscode --format=cjs --platform=node",
+        "esbuild": "npm run esbuild-base -- --sourcemap",
+        "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+        "test-compile": "tsc -p ./",
         "compile": "tsc -p ./",
         "lint": "eslint . --ext .ts,.tsx",
         "watch": "tsc -watch -p ./"
     },
     "devDependencies": {
         "@types/node": "^16.0.0",
+        "@types/vscode": "^1.66.0",
         "@typescript-eslint/eslint-plugin": "^4.28.2",
         "@typescript-eslint/parser": "^4.28.2",
+        "esbuild": "^0.15.7",
         "eslint": "^7.30.0",
-        "typescript": "^4.3.5",
-        "@types/vscode": "^1.57.1"
+        "typescript": "^4.8.2"
     }
 }
