mostly highliter updates

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -17,14 +17,6 @@
         [
             "{",
             "}"
-        ],
-        [
-            "[",
-            "]"
-        ],
-        [
-            "(",
-            ")"
         ]
     ],
     // symbols that are auto closed when typing
@@ -57,54 +49,52 @@
             ]
         },
         {
-            "open": "`",
-            "close": "`",
-            "notIn": [
-                "string",
-                "comment"
-            ]
-        },
-        {
             "open": "/**",
             "close": " */",
             "notIn": [
                 "string"
             ]
+        },
+        {
+            "open": "***",
+            "close": "***"
         }
     ],
     "autoCloseBefore": ";:.,=}])>` \n\t",
     "surroundingPairs": [
         [
-            "{",
-            "}"
+            "(",
+            ")"
         ],
         [
             "[",
             "]"
         ],
         [
-            "(",
-            ")"
-        ],
-        [
-            "'",
-            "'"
-        ],
-        [
-            "\"",
-            "\""
-        ],
-        [
-            "<",
-            ">"
+            "{",
+            "}"
         ]
     ],
-    "folding": {    
+    "folding": {
         "markers": {
             "start": "^\\s*//\\s*#?region\\b",
             "end": "^\\s*//\\s*#?endregion\\b"
         }
-    },    
+    },
+    "colorizedBracketPairs": [
+        [
+            "(",
+            ")"
+        ],
+        [
+            "[",
+            "]"
+        ],
+        [
+            "{",
+            "}"
+        ]
+    ],
     "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)",
     "indentationRules": {
         "increaseIndentPattern": "^((?!\\/\\/).)*(\\{[^}\"'`]*|\\([^)\"'`]*|\\[[^\\]\"'`]*)$",
