--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "type": "git",
         "url": "https://github.com/reaby/maniascript-support"
     },
-    "main": "./out/extension.js",
+    "main": "./app/extension.js",
     "contributes": {
         "menus": {
             "editor/context": [
