--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "publisher": "reaby",
     "license": "MIT",
     "engines": {
-        "vscode": "^1.66.0"
+        "vscode": "^1.80.0"
     },
     "categories": [
         "Programming Languages"
@@ -46,6 +46,10 @@
                     ".Script.txt",
                     ".script.txt"
                 ],
+                "icon": {
+                    "dark": "./images/icon_dark.svg",
+                    "light": "./images/icon_light.svg"
+                },
                 "configuration": "./language-configuration.json"
             }
         ],
@@ -111,7 +115,7 @@
                 }
             }
         ],
-        "configuration": {
+        "configuration": {            
             "title": "ManiaScript",
             "properties": {
                 "maniascript.apidocPath": {
@@ -132,7 +136,7 @@
             }
         }
     },
-    "icon": "images/ms.png",
+    "icon": "./images/ms.png",    
     "scripts": {
         "vscode:prepublish": "npm run esbuild-base -- --minify",
         "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=app/extension.js --external:vscode --format=cjs --platform=node",
