--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maniascript-support",
   "description": "Maniascript support for vscode",
-  "version": "0.2.5-beta.10",
+  "version": "0.2.5",
   "publisher": "reaby",
   "license": "MIT",
   "engines": {
